2010-05-26  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/Extendio.cxx:
	* Glasses/Extendio.h:
	Add data-member ZLink<ZImage> mTexture.

	* Glasses/TriMesh.cxx:
	* Glasses/TriMesh.h:
	Add function ImportOoliteDAT() that imports Oolite models.

	* Glasses/TringuRep.h:
	Smooth shading requires retriangulation.

	* Rnr/GL/Extendio_GL_Rnr.cxx:
	* Rnr/GL/Extendio_GL_Rnr.h:
	Cache bounding-box rendering state in a data-member.
	Adapt for new TringTvor rendering.

	* Rnr/GL/TringuRep_GL_Rnr.cxx:
	* Rnr/GL/TringuRep_GL_Rnr.h:
	Keep TringTvor_GL_Rnr instance to avoid setup overhead.
	Adapt for new TringTvor rendering.

2010-04-06  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/CrawlerSpiritio.cxx:
	* Glasses/CrawlerSpiritio.h:
	* Glasses/TriMeshLightField.cxx:
	* Glasses/TriMeshLightField.h:
	* Glasses/TringuCam.cxx:
	* Glasses/TringuCam.h:
	* Glasses/TringulaTester.cxx:
	* Glasses/TringulaTester.h:
	* Opcode/Ice/IcePoint.h:
	* Rnr/GL/TringulaTester_GL_Rnr.cxx:
	Replace usage of TVector3 with ZPoint.

	* perllib/GLED_Var1_Widgets.pm:
	Move HPointF to GLED_GledCore_Widgets.pm.

2010-04-04  Matevz Tadel  <matevz.tadel@ijs.si>

	Move HTrans to GledCore.

	* Stones/HTrans.cxx:
	* Stones/HTrans.h:
	Moved to GledCore/Stones.

	* catalog.patch:
	Remove HTrans entries.

2010-03-29  Matevz Tadel  <matevz.tadel@ijs.si>

	Un-inline some HTrans functions.

	* Stones/HTrans.cpp:
	* Stones/HTrans.cxx:
	* Stones/HTrans.h:
	Move functions that don't need to be inlined into the cxx file.
	Use explicit template instantiation to enforce code generation
	for float and double template arguments.

	* Stones/GravPlotter.cxx:
	Add missing include.

2010-01-30  Matevz Tadel  <matevz.tadel@ijs.si>

	Do not allow picking through the terrain.

	* Glasses/Tringula.cxx:
	* Glasses/Tringula.h:
	Add function:
	  Float_t RayCollideClosesttHit(const Opcode::Ray& ray, Bool_t cull_p);
	returning distance to terrain (or max-float, if terrain is not hit).

	* Glasses/TringuCam.cxx: